# Image-Processing

./: Googly.html  Micro.html  Orange.html  Pipfile  PythonStarterPack2023_backup.ipynb  Sudoku.html  Table of Contents.html  Trump.html  Untitled.ipynb  Wartime.html  Water.html  pyproject.toml
.ipynb_checkpoints/: Machine-Learning-checkpoint.ipynb  PythonStarterPack2023-checkpoint.ipynb
Extracting-Image/: Colours.ipynb
Segementation/: StudentNumber_Assignment2 copy.ipynb  StudentNumber_Assignment2(1).ipynb  StudentNumber_Assignment2(1).ipynb.bak
Segementation /: StudentNumber_Assignment2.ipynb
Segementation2/: StudentNumber_Assignment2.ipynb
