[tool.poetry]
name = "image-processing"
version = "0.1.0"
description = ""
authors = ["DemiAina <100835583+DigitalDemi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-contrib-python = "^4.10.0.84"
opencv-python = "^4.10.0.84"
notebook = "^7.2.2"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
easygui = "^0.98.3"
pandas = "^2.2.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
